@@ -1,5 +1,9 @@
 2003-05-19  Glynn Foster  <glynn.foster@sun.com>
 
+	* log_repaint.c: Fixed #103481 for large logs crashing.
+
+2003-05-19  Glynn Foster  <glynn.foster@sun.com>
+
 	* Defining timezonevar before including time.h is necessary 
 	for using timezone variable on Cygwin. Patch from Masahiro Sakai.
 	Fixes #111267.
